[package]
name = "partial-aggregate-update"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic-traits = "0.4.0"
common = { path = "../common" }
itertools = "0.13.0"
thread_local = "1.1.8"
bytemuck = { version = "1.23.1", features = ["zeroable_atomics"] }
num-traits = "0.2.19"

[dev-dependencies]
fastrand = "2.1"

