[package]
name = "ticket"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic-traits = "0.4.0"
common = { path = "../common" }
dashmap = "6.1.0"
fnv = "1.0.7"
itertools = "0.13.0"
leapfrog = "0.3.0"
radsort = "0.1.1"
rand = { version = "0.8", features=["small_rng"] }
rayon = "1.10.0"
rustc-hash = "2.0.0"
num-traits = "0.2.19"

[dev-dependencies]
fastrand = "2.1"
