[package]
name = "ticket"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic-traits = "0.4.0"
common = { path = "../common" }
dashmap = "6.1.0"
fnv = "1.0.7"
itertools = "0.13.0"
leapfrog = "0.3.2"
rand = { version = "0.8", features=["small_rng"] }
bytemuck = { version = "1.23.1", features = ["zeroable_atomics"] }
